unpackaged/main/default/objects/Launch__c/Launch__c.object-meta.xml
<CustomObject>
    <description>Product Launches</description>
    <label>Launch</label>
    <nameField>
        <label>Launch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Launches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>