unpackaged/main/default/objects/Launch__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <description>For Launch Members to send emails to five additional emails</description>
    <inlineHelpText>Please enter up to 5 emails separated by commas.</inlineHelpText>
    <label>Additional Emails</label>
    <type>TextArea</type>
</CustomField>