unpackaged/main/default/objects/Launch__c/fields/CAD_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CAD_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAD Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches6</relationshipName>
    <type>Lookup</type>
</CustomField>