unpackaged/main/default/objects/Launch__c/fields/CSI_eCommerce_Content_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>CSI_eCommerce_Content_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch Data Steward</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHljs</relationshipName>
    <type>Lookup</type>
</CustomField>