unpackaged/main/default/objects/Launch__c/fields/CSI_Faceted_Search_Data_Analyst__c.field-meta.xml
<CustomField>
    <fullName>CSI_Faceted_Search_Data_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSI Faceted Search Data Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHlk2</relationshipName>
    <type>Lookup</type>
</CustomField>