unpackaged/main/default/objects/Launch__c/fields/FIT_Overview_Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>FIT_Overview_Content_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FIT Overview Content Manager</description>
    <label>FIT Overview Content Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches6e0T</relationshipName>
    <type>Lookup</type>
</CustomField>