unpackaged/main/default/objects/Launch__c/fields/FIT_Product_Launch_Specialist__c.field-meta.xml
<CustomField>
    <fullName>FIT_Product_Launch_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIT Product Launch Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches9</relationshipName>
    <type>Lookup</type>
</CustomField>