unpackaged/main/default/objects/Launch__c/fields/Graphics_Contact__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graphics Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches5</relationshipName>
    <type>Lookup</type>
</CustomField>