unpackaged/main/default/objects/Launch__c/fields/Help_File_Writer__c.field-meta.xml
<CustomField>
    <fullName>Help_File_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Help File Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHlkW</relationshipName>
    <type>Lookup</type>
</CustomField>