unpackaged/main/default/objects/Launch__c/fields/Launch__c.field-meta.xml
<CustomField>
    <fullName>Launch__c</fullName>
    <displayFormat>Launch-{0000}</displayFormat>
    <label>Launch</label>
    <type>AutoNumber</type>
</CustomField>