unpackaged/main/default/objects/Launch__c/fields/Launch_Ready_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Launch_Ready_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch Ready Email Sent</label>
    <type>Checkbox</type>
</CustomField>