unpackaged/main/default/objects/Launch__c/fields/Logistical_Launch_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Logistical_Launch_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistical Launch Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches7</relationshipName>
    <type>Lookup</type>
</CustomField>