unpackaged/main/default/objects/Launch__c/fields/Logistical_Traffic_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Logistical_Traffic_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistical Traffic Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches8</relationshipName>
    <type>Lookup</type>
</CustomField>