unpackaged/main/default/objects/Launch__c/fields/LogisticalLaunchCoordinator2__c.field-meta.xml
<CustomField>
    <fullName>LogisticalLaunchCoordinator2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistical Launch Coordinator 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesIUhh</relationshipName>
    <type>Lookup</type>
</CustomField>