unpackaged/main/default/objects/Launch__c/fields/Logistics_Compliance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Compliance_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Compliance Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHljd</relationshipName>
    <type>Lookup</type>
</CustomField>