unpackaged/main/default/objects/Launch__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Launch Manager</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches</relationshipName>
    <type>Lookup</type>
</CustomField>