unpackaged/main/default/objects/Launch__c/fields/No_of_Parts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parts__c</fullName>
    <description># of Parts in the Launch</description>
    <label># of Parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>