unpackaged/main/default/objects/Launch__c/fields/Online_Marketing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Online_Marketing_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Marketing Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHljT</relationshipName>
    <type>Lookup</type>
</CustomField>