unpackaged/main/default/objects/Launch__c/fields/PIM_Product_Data_Steward__c.field-meta.xml
<CustomField>
    <fullName>PIM_Product_Data_Steward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIM Product Data Steward</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHlkM</relationshipName>
    <type>Lookup</type>
</CustomField>