unpackaged/main/default/objects/Launch__c/fields/Planned_Finish__c.field-meta.xml
<CustomField>
    <fullName>Planned_Finish__c</fullName>
    <label>Planned Finish</label>
    <type>Date</type>
</CustomField>