unpackaged/main/default/objects/Launch__c/fields/Prelaunch_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Prelaunch_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prelaunch Email Sent</label>
    <type>Checkbox</type>
</CustomField>