unpackaged/main/default/objects/Launch__c/fields/Product_Availability_Planner__c.field-meta.xml
<CustomField>
    <fullName>Product_Availability_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Availability Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches3</relationshipName>
    <type>Lookup</type>
</CustomField>