unpackaged/main/default/objects/Launch__c/fields/Product_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Product_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Launch Product Engineer</description>
    <label>Product Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches1</relationshipName>
    <type>Lookup</type>
</CustomField>