unpackaged/main/default/objects/Launch__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Launch Product Manager</description>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches2</relationshipName>
    <type>Lookup</type>
</CustomField>