unpackaged/main/default/objects/Launch__c/fields/ProductEngineer2__c.field-meta.xml
<CustomField>
    <fullName>ProductEngineer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Engineer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesOE5p</relationshipName>
    <type>Lookup</type>
</CustomField>