unpackaged/main/default/objects/Launch__c/fields/Ready_for_Testing_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Testing_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Testing Email Sent</label>
    <type>Checkbox</type>
</CustomField>