unpackaged/main/default/objects/Launch__c/fields/Technical_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Technical_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Marketer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LaunchesHlkC</relationshipName>
    <type>Lookup</type>
</CustomField>