unpackaged/main/default/objects/Launch__c/fields/Technical_Writer__c.field-meta.xml
<CustomField>
    <fullName>Technical_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Launches4</relationshipName>
    <type>Lookup</type>
</CustomField>