unpackaged/main/default/objects/Launch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Planned_Finish__c</columns>
    <columns>Manager__c</columns>
    <columns>Product_Engineer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>