unpackaged/main/default/objects/Launch__c/listViews/All_Active_Launches.listView-meta.xml
<ListView>
    <fullName>All_Active_Launches</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start__c</columns>
    <columns>Planned_Finish__c</columns>
    <columns>Product_Manager__c</columns>
    <columns>Product_Engineer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>All Active Launches</label>
</ListView>